# retirepy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
retirepy/: future_value.py  models.py  utils.py
src/retirepy/: __about__.py  cash_flow.py  future_value.py  models.py
tests/: test_utils.py
tests/data/: monthly_compounding_interest_with_monthly_contribution_at_end_of_period.csv  monthly_compounding_interest_with_monthly_contribution_at_start_of_period.csv  monthly_compounding_interest_with_no_contribution.csv  yearly_compounding_interest_with_monthly_contribution_at_start_of_period.csv  yearly_compounding_interest_with_no_contribution.csv  yearly_compounding_interest_with_yearly_contribution_at_start_of_period.csv
tests/utils/: download_test_data_tables.py
