[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retirepy"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "Jonathan Rogers", email = "Rogers_Jonathan_W@solarturbines.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pydantic",
    "numpy",
    "pandas"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/retirepy#readme"
Issues = "https://github.com/unknown/retirepy/issues"
Source = "https://github.com/unknown/retirepy"

[tool.hatch.version]
path = "src/retirepy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "jupyterlab",
    "matplotlib",
    "black",
    "requests",
    "lxml",
    "selenium",
    "html5lib",
    "webdriver_manager",
    "h2o-wave",
]
[tool.hatch.envs.default.scripts]
tests = "pytest tests/"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=retirepy --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "retirepy/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
